<resources>
    <string name="app_name">Audio Recorder</string>
    <string name="title_record">Record</string>
    <string name="startrecord">Start Recording</string>
    <string name="stoprecord">Stop Recording</string>
    <string name="title_files">Files</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_name">Audio Recorder</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="select_file_button">Select File</string>
    <string name="play_file_button">Play File</string>
    <string name="stop_play_button">Stop Playback</string>
    <string-array name="file_options">
        <item>ThreeGP</item>
        <item>MPEG-4</item>
    </string-array>
</resources>
