<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/title_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonstart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="187dp"
        android:text="@string/startrecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonstop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/stoprecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonstart" />

    <Button
        android:id="@+id/btnFiles"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_storage_black_24dp"
        android:backgroundTint="@color/colorPrimary"
        android:backgroundTintMode="src_in"
        android:onClick="onClickFiles"
        app:layout_constraintEnd_toStartOf="@+id/btnSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonstop" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_settings_black_24dp"
        android:backgroundTint="@color/colorPrimary"
        android:backgroundTintMode="src_in"
        android:onClick="onClickSettings"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFiles"
        app:layout_constraintTop_toBottomOf="@+id/buttonstop" />

</android.support.constraint.ConstraintLayout>